# slambook

./: .gitignore
ch3/useEigen/: CMakeLists.txt  eigenMatrix.cpp
ch3/useGeometry/: CMakeLists.txt
ch3/visualizeGeometry/: CMakeLists.txt  visualizeGeometry.cpp
ch6/ceres_curve_fitting/: CMakeLists.txt  main.cpp
ch6/g2o_curve_fitting/: CMakeLists.txt
ch7/: CMakeLists.txt  feature_extraction.cpp  pose_estimation_2d2d.cpp  pose_estimation_3d2d.cpp  pose_estimation_3d3d.cpp  triangulation.cpp
ch8/LKFlow/: CMakeLists.txt  useLK.cpp
ch8/directMethod/: CMakeLists.txt  DebugUtil.h  direct_semidense.cpp  direct_sparse.cpp
project/0.2/: CMakeLists.txt
project/0.2/config/: default.yaml
project/0.2/src/: CMakeLists.txt  DebugUtil.cpp  visual_odometry.cpp
project/0.2/test/: run_vo.cpp
project/0.3/: CMakeLists.txt
project/0.3/cmake_modules/: FindG2O.cmake
project/0.3/config/: default.yaml
project/0.3/test/: run_vo.cpp
